assets/CSS/style.css
/* Google fonts */
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Oswald:wght@200..700&display=swap");

/* CSS Variables */
:root {
  --primary-font: "Oswald", sans-serif;
  --secondary-font: "Inter", cursive;
  --primary-color: #524537; /* dark brown */
  --secondary-color: #3b4f31; /* dark green */
  --highlight-color: #50596c; /* blue */
  --highlight-color-light: #8892a9; /* light blue */
}

/* Global styles */
* {
  padding: 0;
  margin: 0;
  border: none;
}

body {
  padding-top: 57px; /* Prevents the navbar to get in the way of heading text */
}

h1,
h2,
h3 {
  font-family: var(--primary-font);
}

p {
  font-family: var(--secondary-font);
}

/* Navbar style */
.navbar {
  background-color: var(--primary-color);
}

.navbar .navbar-nav {
  color: #ffffff;
}

/* Header section */
.heading-image {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)),
    url(../images/strömmande\ vatten.jpg);
  min-height: 700px;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.heading-text {
  color: #ffffff;
  text-align: center;
  position: absolute;
  top: 30%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.heading-text h1 {
  font-family: var(--primary-font);
  font-size: 35px;
  font-weight: 600;
}

.heading-text p {
  font-family: var(--secondary-font);
  font-size: 19px;
  font-weight: 300;
}

/* Buttons */

.btn {
  background-color: transparent;
  border: 2px solid #ffffff;
  color: #ffffff;
  text-transform: uppercase;
  text-decoration: none;
  transition: 0.3s ease-in-out;
  padding: 12px 24px;
  font-weight: bold;
  font-size: 18px;
  border-radius: 12px;
}

.btn:hover {
  background-color: var(--secondary-color);
}



/* Main section */
.wrapper {
  display: flex;
  flex-direction: column;
  padding: 20px;
  justify-content: space-between;
  gap: 20px;
  flex-wrap: wrap;
}

section {
  flex: 1;
  padding: 20px;
  box-sizing: border-box;
}

/* About us section */
#about-us {
  width: 100%;
  height: auto;
  line-height: 2em;
  letter-spacing: 1px;
}

#about-us h2 {
  text-align: center;
}

#about-us p {
  font-size: 300;
  padding-top: 10px;
}

#about-img {
  text-align: center;
}

.about-image {
  width: 100%;
  max-width: 600px;
  height: auto;
}

/* Contact section */
#contact {
  line-height: 2em;
  letter-spacing: 1px;
  background-color: var(--highlight-color);
  color: #ffffff;
  margin-bottom: 20px;
  
}

#contact h2 {
  text-align: center;
}

#contact p {
  font-size: 300;
  padding-top: 10px;
}

/* Footer section */

footer {
  background-color: var(--primary-color);
  color: #ffffff;
  padding: 20px;
  text-align: center;
}

.social-links {
  margin-bottom: 20px;
}

.social-links h3 {
  font-size: 24px;
  font-weight: bold;
  margin-bottom: 20px;
  display: flex;
  justify-content: center;
  gap: 10px;
}

.social-links ul {
  list-style-type: none;
  margin: 10px 0;
}

.social-links ul li {
  display: inline-block;
  margin-right: 15px;
}

.social-links ul li a {
  color: #ffffff;
  font-size: 24px;
  text-decoration: none;
  transition: 0.3s ease;
}

.social-links ul li a:hover {
  color: var(--highlight-color-light);
}

.social-links p {
  font-size: 14px;
  margin-top: 20px;
}

/* Fishing page */

/* Heading section */
.header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url(../images/header-image-fishing.jpg);
  min-height: 400px;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.header-text {
  color: #ffffff;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.header-text h2 {
  font-size: 32px;
  font-weight: 600;
}

.header-text p {
  font-size: 19px;
  font-weight: 300;
  margin-top: 20px;
}

/* main section */

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
  padding: 20px;
  width: 100%;
  min-height: 100vh;
}
/* Text column*/
.fishing-text {
  padding-top: 10px;
}

.fishing-text,
.fishing-images {
  width: 100%;
}

.card {
  padding: 20px;
  margin-bottom: 20px;
  border: none;
  text-align: center;
}
.card p {
  font-size: 15px;
}

/* Images section */
.fishing-images {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 25px;
  padding-top: 0;
}

.image img {
  width: 100%;
  height: auto;
}

/* Booking page */

#hero {
  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/tennan.jpg);
  min-height: 700px;
  background-position: center, center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.hero-text {
  color: #ffffff;
  text-align: center;
  position: absolute;
  top: 13%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.hero-text h2 {
  font-size: 32px;
}

.hero-text p {
  font-size: 12px;
  text-decoration: underline;
}

/* Contact form */
.form-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
}

form {
  background: linear-gradient( rgba(80, 89, 108, 0.5), rgba(80, 89, 108, 0.5));
  display: flex;
  flex-direction: column;
  max-width: 400px;
  width: 80%;
  padding: 20px;
  border-radius: 10px;
  border: 1px solid #ffffff;
  padding-top: 10px;
  margin-top: 150px;
}

legend {
  color: #ffffff;
}

label {
  color: #ffffff;
}


input, 
select {
  width: 100%;
  padding: 10px;
  margin: 5px 0;
  border-radius: 5px;
  background-color: rgba(80, 89, 108, 0.5);
  color: #fff;
}

input[type="submit"] {
  background-color: var(--highlight-color);
  border: 1px solid #ffffff;
  color: #ffffff;
  font-family: var(--primary-color);
  text-transform: uppercase;
  font-weight: bold;
  cursor: pointer;
  transition: 0.3s ease-in-out;
}

input[type="submit"]:hover {
  background-color: var(--secondary-color);
  
}

/* Success page */
#hero-success {
  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/tennan.jpg);
  min-height: 400px;
  background-position: center, center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.success {
  text-align: center;
  color: #ffffff;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

}



/* Media query for larger screens (768px) */
@media (min-width: 768px) {
  .wrapper {
    flex-direction: row;
    padding: 20px;
  }

  .section {
    margin-bottom: 20px;
  }

  .heading-text h1 {
    font-size: 30px;
  }

  .container {
    flex-direction: row; /* Side-by-side layout */
    justify-content: space-between;
    align-items: stretch; /* Makes both sections take full height */
    min-height: 100vh; /* Ensures full height */
  }

  .fishing-text,
  .fishing-images {
    flex: 1; /* Make both sections grow equally */
    min-width: 45%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly; /* Center texts vertically */
  }

  .fishing-images {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly; /* Center images as well */
  }

  .image img {
    width: 100%;
    max-width: 500px;
  }

  .card {
    text-align: left;
  }
}

/* Media query for very large screens (1200px) */
/* @media (min-width: 1200px) {
    .fishing-text, .fishing-images {
      flex: 1.2;
      max-width: 600px;
    }
  
    .image img {
      max-width: 500px;
    }'/
  }
  


  
  
  
  










/*
@media (max-width: 768px) {
    .wrapper {
        flex-direction: column;
        padding: 20px;
    }

    .section {
        margin-bottom: 20px;
    }

    .heading-text h1 {
        font-size: 30px;
    }

    
}*/

